# candid-score

./: .env.example  .gitignore  README.md  assigment.md  compose.override.yml  compose.prod.yml  compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/app/: auth.py  create_admin.py  db.py  models.py  schemas.py  seed.py
backend/app/core/: config.py  database.py
backend/app/routers/: auth.py  candidates.py
backend/app/services/: candidate_service.py
backend/migrations/: env.py
backend/migrations/versions/: 5780540197f0_initial_schema.py  d8576cfd69e2_add_candidate_summary.py  e6a6290a6a27_make_created_at_timezone_aware.py
frontend/: Dockerfile  package-lock.json  package.json  sample.tsx  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/: router.tsx
frontend/src/components/: data-table-column-header.tsx  data-table.tsx  logout-button.tsx  workspace-header.tsx
frontend/src/components/auth/: protected-route.tsx  public-route.tsx
frontend/src/components/partials/: data-table.tsx  field-wrapper.tsx  page-wrapper.tsx
frontend/src/components/ui/: avatar.tsx  card.tsx  sonner.tsx
frontend/src/features/auth/api/: mutation.ts  service.ts  session.ts  types.ts
frontend/src/features/auth/components/: index.tsx
frontend/src/features/candidates/api/: mutation.ts  query.ts  service.ts  types.ts
frontend/src/lib/: date.ts  http.ts
frontend/src/pages/: candidate-detail-page.tsx  candidates-page.tsx  login-page.tsx  not-found-page.tsx
(+12 files in other folders)
